fix text align

--- a/site/public/css/rainbow-customization.css
+++ b/site/public/css/rainbow-customization.css
@@ -229,7 +229,8 @@ hr {
     width: 32.5em;
 }
 
-#manual-grading-table {
+#manual-grading-table,
+#performance-warnings-table {
     text-align: left;
 }
 
